<resources>
    <string name="app_name">Tracking My Pantry</string>

    <!--Buttons texts-->
    <string name="buyProduct">Buy product</string>
    <string name="buy">Buy</string>
    <string name="signIn">Sign in</string>
    <string name="signUp">Sign up</string>
    <string name="search">Search</string>
    <string name="share">Share</string>
    <string name="local">See local grocery</string>
    <string name="negative">No</string>
    <string name="negativeCanc">Cancel</string>
    <string name="positive">Yes</string>
    <string name="positiveOk">OK</string>
    <string name="choose">Choose</string>
    <string name="chooseDevice">Choose the device you want to connect to</string>
    <string name="describe">Description</string>
    <string name="describeName">Set a name and a description for</string>
    <string name="describeAdd">Add a description</string>
    <string name="rate">Rate</string>
    <string name="rateSet">Set a rate for</string>
    <string name="send">Send</string>
    <string name="barcode">Barcode</string>
    <string name="name">Name</string>
    <string name="logout">Logout</string>
    <string name="productNew">New product</string>
    <string name="productWatch">See your products</string>
    <string name="delete">Delete</string>
    <string name="retry">Retry</string>
    <string name="select">Select</string>
    <string name="dateExpire">Expiration date</string>
    <string name="dateExpireSet">Set an expiration date and choose</string>
    <string name="pictureTake">Take a photo</string>
    <string name="set">Set</string>
    <string name="collectionCreate">Create collection</string>
    <string name="create">Create</string>
    <string name="remove">Remove</string>
    <string name="stop">Stop</string>
    <string name="suggest">Suggestions</string>
    <string name="suggestWatch">See received suggestions</string>
    <string name="requestAccept">Accept a request</string>
    <string name="pair">Pair</string>
    <string name="locations">Locations</string>
    <string name="locationsWatch">See your locations</string>
    <string name="positionMy">My position</string>
    <string name="save">Save</string>
    <string name="noElements">No available elements</string>
    <string name="end">End</string>
    <string name="discovery">Discovery</string>
    <!--Buttons texts-->

    <!--Hints-->
    <string name="emailHint">Email</string>
    <string name="usernameHint">Username</string>
    <string name="passwordHint">Password</string>
    <string name="barcodeHint">Insert the barcode</string>
    <!--Hints-->

    <!--Shared prefs-->
    <string name="accessToken">Access</string>
    <string name="credentials">Credentials</string>
    <!--Shared prefs-->
</resources>