<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:foregroundTint="#FFFFFF"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buyButton"
        android:layout_width="@dimen/largeButtonWidth"
        android:layout_height="@dimen/largeButtonHeight"
        android:background="@drawable/lightblue_large_corner_button"
        android:text="@string/buy"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.67" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signupButton"
        android:layout_width="@dimen/mediumButtonWidth"
        android:layout_height="@dimen/mediumButtonHeight"
        android:background="@drawable/green_medium_corner_button"
        android:text="@string/signUp"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/buyButton" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signinButton"
        android:layout_width="@dimen/mediumButtonWidth"
        android:layout_height="@dimen/mediumButtonHeight"
        android:background="@drawable/green_medium_corner_button"
        android:text="@string/signIn"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/buyButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.85" />

    <EditText
        android:id="@+id/barcodeText"
        android:layout_width="0dp"
        android:layout_height="@dimen/circleButtonHeight"
        android:hint="Insert a barcode"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toStartOf="@+id/cameraButton"
        app:layout_constraintStart_toStartOf="@+id/buyButton" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/cameraButton"
        android:layout_width="@dimen/circleButtonWidth"
        android:layout_height="@dimen/circleButtonHeight"
        android:background="@drawable/red_circle_button"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toEndOf="@+id/signinButton"
        app:srcCompat="@drawable/ic_baseline_photo_camera_24" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/searchButton"
        android:layout_width="@dimen/mediumButtonWidth"
        android:layout_height="wrap_content"
        android:background="@drawable/green_medium_corner_button"
        android:text="@string/search"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline4" />

</androidx.constraintlayout.widget.ConstraintLayout>