<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".ShareActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline53"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline54"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline55"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline56"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.85" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/itemsWatchButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/orange_medium_corner_button"
        android:text="@string/productWatch"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/guideline53"
        app:layout_constraintEnd_toStartOf="@+id/guideline56"
        app:layout_constraintStart_toStartOf="@+id/guideline55"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/locationsWatchButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/orange_medium_corner_button"
        android:text="@string/locationsWatch"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/guideline56"
        app:layout_constraintStart_toStartOf="@+id/guideline55"
        app:layout_constraintTop_toBottomOf="@+id/itemsWatchButton" />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline54"
        app:layout_constraintEnd_toStartOf="@+id/guideline56"
        app:layout_constraintStart_toStartOf="@+id/guideline55"
        app:layout_constraintTop_toTopOf="@+id/guideline53" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/terminateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/green_medium_corner_button"
        android:text="@string/end"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/guideline56"
        app:layout_constraintStart_toStartOf="@+id/guideline55"
        app:layout_constraintTop_toTopOf="@+id/guideline54" />
</androidx.constraintlayout.widget.ConstraintLayout>