<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RateActivity">

        <NumberPicker
            android:id="@+id/ratePicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/guideline18"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline20" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.1" />

        <TextView
            android:id="@+id/setDescText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/describe"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline17"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/rateText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rate"
            android:textColor="@color/black"
            android:textSize="32sp"
            android:textStyle="bold|italic"
            app:layout_constraintBottom_toTopOf="@+id/guideline18"
            app:layout_constraintEnd_toStartOf="@+id/ratePicker"
            app:layout_constraintTop_toTopOf="@+id/guideline20" />

        <TextView
            android:id="@+id/descText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/describe1"
            android:textColor="@color/black"
            android:textSize="32sp"
            android:textStyle="bold|italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline18" />

        <EditText
            android:id="@+id/inputTextMultiLine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/descText" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.6" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.9" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/sendButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/send"
            android:background="@drawable/green_medium_corner_button"
            app:layout_constraintBottom_toTopOf="@+id/guideline19"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.2" />

        <TextView
            android:id="@+id/barcodeDescText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline20"
            app:layout_constraintEnd_toStartOf="@+id/guideline21"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/nameDescText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline20"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline21" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline21"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>